# django-lxp

./: .gitignore  Pipfile  Procfile  README.md  app.json  encrypted.data  index.md  manage.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: django.yml
bulma/: package-lock.json  package.json
bulma-sass/: package-lock.json  package.json
bulma-sass/sass/: style.scss
bulma/sass/: style.scss
djangoLxp/: asgi.py  settings.py  urls.py  wsgi.py
extra/: pycharm.key
extra/Siecle/: Exemple.csv
extra/cyclades/: champs_cyclades.ods  csv_tuples.py
inscription/: admin.py  filters.py  forms.py  models.py  tables.py  urls.py  utils.py  views.py
inscription/data/: commune.csv  departement.csv  pays.csv  sociopro.csv
inscription/fixtures/: commune.json  departement.json  lv.json  mee.json  pays.json  sociopro.json  spe.json
inscription/templatetags/: verbose_names.py
migrations/address/: 0001_initial.py
migrations/captcha/: 0001_initial.py
migrations/inscription/: 0001_initial.py  0002_alter_baseeleve_civility_alter_baseeleve_genre_and_more.py  0002_baseeleve_commune_naissance.py  0002_donnees_initiales.py  0002_initial-data.py  0003_baseeleve_departement_naissance_and_more.py  0003_remove_baseeleve_type_resp1_and_more.py  0004_baseeleve_nationalite.py  0004_departement.py  0005_baseeleve_dys_baseeleve_ville_natale_and_more.py  0005_departement_code_departement_nom.py  0006_alter_departement_code_alter_departement_nom.py  0006_spe_baseeleve_spe1_baseeleve_spe2_baseeleve_spe3.py  0007_alter_baseeleve_nom_usage.py  (+4 more)
templates/: base.html
(+27 files in other folders)
