[tool.poetry]
name = "django-lxp"
version = "0.1.0"
description = ""
authors = ["Davy39"]

[tool.poetry.dependencies]
python =  "^3.8"
asgiref = "*"
"backports.zoneinfo" = "*"
beautifulsoup4 = "*"
boto3 = "*"
botocore = "*"
certifi = "*"
cffi = "*"
charset-normalizer = "*"
cssselect2 = "*"
dj-database-url = "*"
django-address = "*"
django-autocomplete-light = {git = "https://github.com/yourlabs/django-autocomplete-light"}
django-bootstrap4 = "*"
django-brotli = "*"
django-crispy-forms = "*"
django-filter = "*"
django-formtools = "*"
django-heroku = "*"
django-leaflet = "*"
django-multiselectfield = "*"
django-phonenumber-field = {version = "*", extras = ["phonenumberslite"]}
django-ranged-response = "*"
django-simple-captcha = "*"
django-storages = "*"
django-tables2 = "*"
django-weasyprint = "*"
docopt = "*"
fonttools = "*"
gunicorn = "*"
html5lib = "*"
idna = "*"
jmespath = "*"
phonenumberslite = "*"
pipreqs = "*"
psycopg2 = "*"
pycparser = "*"
pydyf = "*"
pyphen = "*"
python-dateutil = "*"
python-dotenv = "*"
requests = "*"
s3transfer = "*"
six = "*"
soupsieve = "*"
sqlparse = "*"
tinycss2 = "*"
urllib3 = "*"
weasyprint = "*"
webencodings = "*"
whitenoise = "*"
yarg = "*"
zopfli = "*"
Brotli = "*"
Django = "*"
Pillow = "*"
mysqlclient = "*"
cryptography = "3.3.2"
